<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:too="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddOffers">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_view"
            android:layout_width="195dp"
            android:layout_height="191dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:baselineAligned="true" />

        <Button
            android:id="@+id/btnChooseimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/CHOOSEIMAGE"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />



        <EditText
            android:id="@+id/offernameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/offereditem"
            android:inputType="textPersonName"
            android:textColorHint="?android:attr/textColorPrimaryNoDisable"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="28dp" />

        <EditText
            android:id="@+id/servingsET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/noofservings"
            android:inputType="textPersonName"
            android:textColorHint="?android:attr/textColorPrimaryNoDisable"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/offernameET"
            android:layout_marginLeft="25dp" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:textColorHint="?android:attr/textColorPrimaryNoDisable"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servingsET"
            android:layout_marginLeft="25dp" />

        <Spinner
            android:id="@+id/spinnerCategories"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:entries="@array/categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressET"
            android:layout_marginLeft="25dp" />

        <EditText
            android:id="@+id/pFromET"
            android:layout_width="286dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/pickupstarting"
            android:inputType="textPersonName"
            android:textColorHint="?android:attr/textColorPrimaryNoDisable"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategories"
            android:layout_marginLeft="25dp" />

        <EditText
            android:id="@+id/pByET"
            android:layout_width="284dp"
            android:layout_height="51dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/pickupending"
            android:inputType="textPersonName"
            android:textColorHint="?android:attr/textColorPrimaryNoDisable"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pFromET"
            android:layout_marginLeft="25dp" />

        <EditText
            android:id="@+id/descET"
            android:layout_width="373dp"
            android:layout_height="93dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColorHint="?android:attr/textColorPrimaryNoDisable"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pByET"
            android:layout_marginLeft="25dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="388dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/buttonAddOffer"
            android:layout_width="195dp"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:onClick="CreateOffer"
            android:text="@string/ADDOFFER"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descET"
            android:layout_marginLeft="25dp" />



    </LinearLayout>
</ScrollView>